# openclaw-plugin-ansible

./: .gitignore  AGENTS.md  ANSIBLE-ANALYSIS.md  ANSIBLE-ARCHITECTURE.md  ANSIBLE-PLAN.md  BUILD.md  DEBUG_STATUS.md  PR_DESCRIPTION.md  README.md  justfile  openclaw.plugin.json  package-lock.json  package.json  test-sync.mjs
contracts/: rust-core-contract-v1.md
docs/: DEFECTS.md  README.md  agent-addressing-migration.md  ansible-completion-checklist-v1.md  ansible-e2e-deployment-test-plan-v1.md  architecture.md  clawhub-publish-prep-v1.md  delegation-directory.md  deployment-runbook-v1.md  distributed-pipes-v2.md  documentation-status-v1.md  mvp0-handoff-checklist.md  mvp1-industrial-test-plan-v1.md  openclaw-integration.md  protocol.md  release-dual-track-v1.md  runtime-protocol-v1.md  rust-port-proposal-v1.md  setup.md  skill-pair-manifest-schema-v1.md  state-model-v2.md  update-architecture.md
examples/: config-backbone.yaml  config-edge.yaml
rust-core/: Cargo.toml  README.md
rust-core/crates/ansible-core-service/: Cargo.toml
rust-core/crates/ansible-core-service/src/: lib.rs
scripts/: integration-capability-lifecycle-smoke.mjs  integration-gateway-smoke.mjs  integration-mvp1-industrial-suite.mjs  integration-mvp1-industrial.mjs  integration-mvp2-lifecycle-core.mjs  integration-mvp2-rollback-drill.mjs  migrate-v2026-2-19.mjs  nonprod-deploy-harness.mjs  npm-publish-preflight.mjs  provenance-gate.mjs  release-gate.mjs  safe-deploy-pull.sh  skill-clawhub-preflight.mjs  sync-agents-skills.sh
src/: admission.ts  auth.ts  cli.ts  dispatcher.ts  hooks.ts  (+8 more)
(+73 files in other folders)
